tests/ui/use/use-after-move-based-on-type.stderr
error[E0382]: borrow of moved value: `x`
  --> $DIR/use-after-move-based-on-type.rs:4:20
   |
LL |     let x = "Hello!".to_string();
   |         - move occurs because `x` has type `String`, which does not implement the `Copy` trait
LL |     let _y = x;
   |              - value moved here
LL |     println!("{}", x);
   |                    ^ value borrowed here after move
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider cloning the value if the performance cost is acceptable
   |
LL |     let _y = x.clone();
   |               ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
